--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -35,7 +35,7 @@ jobs:
           cache: 'npm'
           cache-dependency-path: app/package-lock.json
       - name: Install dependencies
-        run: npm ci
+        run: npm i # npm ci throws error due to mismatching package & package-lock files
       - name: Build
         run: npm run build
       - name: Setup Pages
