--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-          cache-dependency-path: app/package-lock.json
+          cache-dependency-path: app/package.json
       - name: Install dependencies
         run: npm i # npm ci throws error due to mismatching package & package-lock files
       - name: Build
